--- a/index.html
+++ b/index.html
@@ -4,37 +4,73 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Explore the profound poetry and philosophical musings of Iron Heist (John Colt). Dive into collections like 'Garden of Grief' and 'You and the Moon' for soul-stirring verses.">
-    <meta name="keywords" content="poetry, philosophy, Iron Heist, John Colt, Ironheist6, Johncolt29, Garden of Grief, You and the Moon, philosophical poetry, emotional poetry">
+    <meta name="keywords" content="Iron Heist poetry, John Colt poetry, philosophical poetry, emotional poetry, Garden of Grief, You and the Moon, poetry collections">
     <meta name="author" content="Iron Heist (John Colt)">
     <meta name="robots" content="index, follow">
-    <meta property="og:title" content="My Poetry Collection | Iron Heist (John Colt)">
+    <meta property="og:title" content="Iron Heist Poetry | John Colt">
     <meta property="og:description" content="Explore the profound poetry and philosophical musings of Iron Heist (John Colt). Dive into collections like 'Garden of Grief' and 'You and the Moon' for soul-stirring verses.">
-    <meta property="og:image" content="https://yourwebsite.com/poetry.png">
-    <meta property="og:url" content="https://yourwebsite.com">
+    <meta property="og:image" content="https://ironheist.github.io/main/webp%20src/GOG.webp">
+    <meta property="og:url" content="https://ironheist.github.io/main/">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="My Poetry Collection | Iron Heist (John Colt)">
+    <meta name="twitter:title" content="Iron Heist Poetry | John Colt">
     <meta name="twitter:description" content="Explore the profound poetry and philosophical musings of Iron Heist (John Colt). Dive into collections like 'Garden of Grief' and 'You and the Moon' for soul-stirring verses.">
-    <meta name="twitter:image" content="https://yourwebsite.com/poetry.png">
+    <meta name="twitter:image" content="https://ironheist.github.io/main/webp%20src/GOG.webp">
+    <link rel="canonical" href="https://ironheist.github.io/main/">
     <script type="application/ld+json">
     {
         "@context": "https://schema.org",
-        "@type": "WebPage",
-        "name": "My Poetry Collection | Iron Heist (John Colt)",
-        "description": "Explore the profound poetry and philosophical musings of Iron Heist (John Colt). Dive into collections like 'Garden of Grief' and 'You and the Moon' for soul-stirring verses.",
-        "url": "https://yourwebsite.com",
+        "@type": "WebSite",
+        "name": "Iron Heist Poetry",
+        "url": "https://ironheist.github.io/main/",
+        "description": "Explore the profound poetry of Iron Heist (John Colt), including collections like Garden of Grief and You and the Moon.",
         "author": {
             "@type": "Person",
             "name": "Iron Heist (John Colt)"
         },
-        "image": "https://yourwebsite.com/poetry.png",
-        "keywords": "poetry, philosophy, Iron Heist, John Colt, Ironheist6, Johncolt29, Garden of Grief, You and the Moon, philosophical poetry, emotional poetry"
+        "potentialAction": {
+            "@type": "SearchAction",
+            "target": "https://ironheist.github.io/main/?search={search_term_string}",
+            "query-input": "required name=search_term_string"
+        },
+        "hasPart": [
+            {
+                "@type": "Book",
+                "name": "Garden of Grief",
+                "url": "https://ironheist.github.io/main/viewer%20src/viewer.html?pdf=pdfs/GARDEN%20OF%20GRIEF.pdf&title=Garden%20of%20Grief",
+                "author": {
+                    "@type": "Person",
+                    "name": "Iron Heist (John Colt)"
+                }
+            },
+            {
+                "@type": "Book",
+                "name": "You and the Moon",
+                "url": "https://ironheist.github.io/main/viewer%20src/viewer.html?pdf=pdfs/You%20and%20the%20Moon.pdf&title=You%20and%20the%20Moon",
+                "author": {
+                    "@type": "Person",
+                    "name": "Iron Heist (John Colt)"
+                }
+            },
+            {
+                "@type": "Blog",
+                "name": "Poetic Musings",
+                "url": "https://ironheist.github.io/main/blog%20src/blog.html"
+            }
+        ]
     }
     </script>
-    <title>My Poetry Collection | Iron Heist (John Colt)</title>
-    <link rel="icon" href="png src/1.png" type="image/x-icon" />
-    <link rel="preload" href="fonts src/KirimomiSwash.ttf" as="font" type="font/ttf" crossorigin>
-    <link rel="preload" href="webp src/BG 1.webp" as="image" type="image/webp">
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-XXXXXXXXXX');
+    </script>
+    <title>Iron Heist Poetry | John Colt</title>
+    <link rel="icon" href="png%20src/1.png" type="image/x-icon" />
+    <link rel="preload" href="fonts%20src/KirimomiSwash.ttf" as="font" type="font/ttf" crossorigin>
+    <link rel="preload" href="webp%20src/BG%201.webp" as="image" type="image/webp">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
@@ -45,15 +81,13 @@
                 <h1><span class="logo-first">Iron</span> <span class="logo-second">Heist</span></h1>
                 <p class="logo-subtitle">Poetry Collections</p>
             </div>
-            
             <ul class="nav-links">
                 <li><a href="#books">Books</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#timeline">Timeline</a></li>
                 <li><a href="#playlists">Playlists</a></li>
-                <li><a href="blog src/blog.html">Blog</a></li>
+                <li><a href="blog%20src/blog.html">Blog</a></li>
             </ul>
-            
             <div class="header-controls">
                 <div class="dark-mode-toggle">
                     <input type="checkbox" id="darkModeToggle" class="dark-mode-checkbox">
@@ -93,9 +127,9 @@
             </div>
             <div class="featured-grid">
                 <div class="featured-poem">
-                    <a href="viewer src/viewer.html?pdf=pdfs/GARDEN OF GRIEF.pdf&title=Garden of Grief" target="_blank">
+                    <a href="viewer%20src/viewer.html?pdf=pdfs/GARDEN%20OF%20GRIEF.pdf&title=Garden%20of%20Grief" target="_blank">
                         <div class="featured-image-container">
-                            <img src="webp src/GOG.webp" alt="Garden of Grief - A Collection of Poems by Iron Heist">
+                            <img src="webp%20src/GOG.webp" alt="Garden of Grief poetry book cover by Iron Heist" loading="lazy">
                             <div class="featured-overlay"></div>
                         </div>
                         <div class="featured-info">
@@ -106,9 +140,9 @@
                     </a>
                 </div>
                 <div class="featured-poem">
-                    <a href="viewer src/viewer.html?pdf=pdfs/You and the Moon.pdf&title=You and the Moon" target="_blank">
+                    <a href="viewer%20src/viewer.html?pdf=pdfs/You%20and%20the%20Moon.pdf&title=You%20and%20the%20Moon" target="_blank">
                         <div class="featured-image-container">
-                            <img src="webp src/You are my moonlight.webp" alt="You and the Moon - Romantic Poetry by Iron Heist">
+                            <img src="webp%20src/You%20are%20my%20moonlight.webp" alt="You and the Moon poetry book cover by Iron Heist" loading="lazy">
                             <div class="featured-overlay"></div>
                         </div>
                         <div class="featured-info">
@@ -127,7 +161,7 @@
             </div>
             <p class="section-subtitle">Weekly reflections and inspirations behind my work</p>
             <div class="blog-grid" id="blogContainer"></div>
-            <a href="blog src/blog.html" class="cta-button secondary">View All Posts</a>
+            <a href="blog%20src/blog.html" class="cta-button secondary">View All Posts</a>
         </section>
 
         <section class="book-section" id="books">
@@ -153,7 +187,7 @@
                         <p>Most of my poems come from a place of silence—the kind you feel at 3 a.m. when everything slows down and all the pain you’ve been avoiding finally speaks. I write for the ones who overthink, who miss people they shouldn’t, who carry scars in places no one sees.</p>
                         <p>If you’ve ever sat in silence and wondered if anyone else feels like you do, maybe my poems will make you feel a little less alone. Or at least, understood.</p>
                         <div class="signature">
-                            <img src="png src/2.png" alt="Iron Heist Signature" class="signature-img">
+                            <img src="png%20src/2.png" alt="Iron Heist signature" class="signature-img" loading="lazy">
                         </div>
                     </div>
                 </div>
@@ -229,20 +263,20 @@
                     <li><a href="#about">About</a></li>
                     <li><a href="#timeline">Timeline</a></li>
                     <li><a href="#playlists">Playlists</a></li>
-                    <li><a href="blog src/blog.html">Blog</a></li>
+                    <li><a href="blog%20src/blog.html">Blog</a></li>
                 </ul>
             </div>
             <div class="footer-section">
                 <h3>Connect</h3>
                 <div class="social-links">
                     <a href="https://www.instagram.com/johncolt29" target="_blank" aria-label="Follow Iron Heist on Instagram">
-                        <img src="png src/instagram.png" alt="Instagram" class="social-icon">
+                        <img src="png%20src/instagram.png" alt="Iron Heist Instagram icon" class="social-icon" loading="lazy">
                     </a>
                     <a href="https://www.wattpad.com/user/iron_heist" target="_blank" aria-label="Follow Iron Heist on Wattpad">
-                        <img src="png src/wattpad.png" alt="Wattpad" class="social-icon">
+                        <img src="png%20src/wattpad.png" alt="Iron Heist Wattpad icon" class="social-icon" loading="lazy">
                     </a>
                     <a href="https://ironheist6.tumblr.com/" target="_blank" aria-label="Follow Iron Heist on Tumblr">
-                        <img src="png src/tumblr.png" alt="Tumblr" class="social-icon">
+                        <img src="png%20src/tumblr.png" alt="Iron Heist Tumblr icon" class="social-icon" loading="lazy">
                     </a>
                 </div>
             </div>
@@ -258,7 +292,7 @@
         <div class="footer-bottom">
             <p class="date-time" id="date-time"></p>
             <div class="copyright">
-                © <span id="current-year"></span> Iron Heist. All Rights Reserved. For permissions, contact <a href="/cdn-cgi/l/email-protection#7e170c1110161b170d0a483e19131f1712501d1113"><span class="__cf_email__" data-cfemail="b4ddc6dbdadcd1ddc7c082f4d3d9d5ddd89ad7dbd9">[email protected]</span></a>
+                © <span id="current-year"></span> Iron Heist. All Rights Reserved. For permissions, contact <a href="mailto:ironheist6@gmail.com">ironheist6@gmail.com</a>
             </div>
             <div class="credits">
                 <p>Created by Iron Heist (John Colt). Icons by <a href="https://www.flaticon.com" target="_blank">Flaticon</a>. Built with AI assistance.</p>
@@ -267,10 +301,9 @@
     </footer>
 
     <a href="#" class="back-to-top" title="Go to top">
-        <img src="png src/top.png" alt="Back to Top" class="back-to-top-icon">
+        <img src="png%20src/top.png" alt="Back to top icon" class="back-to-top-icon" loading="lazy">
     </a>
 
-    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
     <script src="script.js"></script>
     <script>
         // Back to Top Button Functionality
@@ -292,5 +325,5 @@
             });
         });
     </script>
-<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'93e31d5c986b4546',t:'MTc0Njk4MTU5MC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+</body>
 </html>
