--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="robots" content="index, follow">
     <meta property="og:title" content="Iron Heist Poetry | John Colt">
     <meta property="og:description" content="Explore the profound poetry and philosophical musings of Iron Heist (John Colt). Dive into collections like 'Garden of Grief' and 'You and the Moon' for soul-stirring verses.">
-    <meta property="og:image" content="https://ironheist.github.io/main/webp%20src/GOG.webp">
+    <meta property="og:image" content="https://ironheist.github.io/main/webp%20src/4.webp">
     <meta property="og:url" content="https://ironheist.github.io/main/">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
