--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Iron Heist Poetry | John Colt">
     <meta name="twitter:description" content="Explore the profound poetry and philosophical musings of Iron Heist (John Colt). Dive into collections like 'Garden of Grief' and 'You and the Moon' for soul-stirring verses.">
-    <meta name="twitter:image" content="https://ironheist.github.io/main/webp%20src/GOG.webp">
+    <meta name="twitter:image" content="https://ironheist.github.io/main/webp%20src/4.webp">
     <link rel="canonical" href="https://ironheist.github.io/main/">
     <script type="application/ld+json">
     {
